--- a/chirper/public/index.html
+++ b/chirper/public/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Chirp!</title>
-    <link rel="stylesheet" href="/lib/skeleton/normalize.css" />
-    <link rel="stylesheet" href="/lib/skeleton/skeleton.css" />
+    <link rel="stylesheet" href="/lib/skeleton/css/normalize.css" />
+    <link rel="stylesheet" href="/lib/skeleton/css/skeleton.css" />
     <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
